Centered the game, set up the words/made it so they are now randomly chosen at the start/after battles, set up what happens when the correct word/translation is entered, set up scoring and made some abitrary code changes for readability/cleanup

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,18 @@
   margin: 0;
 }
 
+body {
+  display: grid;
+  place-content: center;
+  height: 100vh;
+}
+
 .pixelated {
   image-rendering: pixelated;
 }
 
 .translation-box {
-  display: inline;
+  display: inline-block;
 }
 
 .translation-label {
